--- a/style.css
+++ b/style.css
@@ -93,8 +93,10 @@ legend {
 
 .radio-options {
     display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
     gap: 10px;
+
 }
 
 input[type="text"], input[type="number"], select, textarea {
