--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 :root {
     --primary-color: #FFA500;
     --secondary-color: #4CAF50;
@@ -8,6 +9,9 @@
 
 * {
     font-family: 'Montserrat', sans-serif;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
 body {
@@ -15,9 +19,9 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 0;
-    padding: 0;
-    min-height: 100vh;
+    width: 100%;
+    height: 100vh;
+    background-color: #FFA500;
 }
 
 header {
@@ -62,10 +66,51 @@ main {
     color: var(--text-color);
 }
 
-form {
-     display: flex;
+.container {
+    width: 80%;
+    height: 100vh;
+    display: flex;
+    box-shadow: 5px 5px 10px rgb(255, 239, 214);
+}
+
+.form {
+    display: flex;
     flex-direction: column; /* Empilha os elementos verticalmente */
     align-items: center;
+    width: 50%;
+    justify-content: center;
+    background-color: #fff;
+    padding: 3rem;
+}
+
+.form-header {
+    margin-bottom: 3rem;
+    display: flex;
+    justify-content: space-between;
+}
+
+.form-image {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #ccc;
+    padding: 1rem;
+}
+
+.form-image img {
+    width: 31rem;
+
+}
+
+.login-button {
+    display: flex;
+    align-items: center;
+}
+
+.login-button button {
+    border: none;
+    background-color: yellow;
 }
 
 fieldset {
