--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 :root {
     --primary-color: #FFA500;
     --secondary-color: #4CAF50;
@@ -9,9 +8,6 @@
 
 * {
     font-family: 'Montserrat', sans-serif;
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
 }
 
 body {
@@ -19,9 +15,9 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
-    height: 100vh;
-    background-color: #FFA500;
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
 }
 
 header {
@@ -66,51 +62,10 @@ main {
     color: var(--text-color);
 }
 
-.container {
-    width: 80%;
-    height: 100vh;
-    display: flex;
-    box-shadow: 5px 5px 10px rgb(255, 239, 214);
-}
-
-.form {
-    display: flex;
+form {
+     display: flex;
     flex-direction: column; /* Empilha os elementos verticalmente */
     align-items: center;
-    width: 50%;
-    justify-content: center;
-    background-color: #fff;
-    padding: 3rem;
-}
-
-.form-header {
-    margin-bottom: 3rem;
-    display: flex;
-    justify-content: space-between;
-}
-
-.form-image {
-    width: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #ccc;
-    padding: 1rem;
-}
-
-.form-image img {
-    width: 31rem;
-
-}
-
-.login-button {
-    display: flex;
-    align-items: center;
-}
-
-.login-button button {
-    border: none;
-    background-color: yellow;
 }
 
 fieldset {
